# ENOW-client

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  \  feedback.json  main.cpp  payload.json  topic.json  topic2.json  topic3.json
Vision/: CMakeLists.txt  main.cpp
Vision/header/: DetectRegions.hpp  Region.hpp
Vision/json/: json_st.cc
Vision/src/: DetectRegions.cpp  Region.cpp
Windforces/: main.cpp
Windforces/header/Driver/: common.hpp
Windforces/header/Driver/Raspberry_Pi_2/: pi_2_address.cpp  pi_2_address.hpp
Windforces/java/Interpreter/: .classpath  .pydevproject
Windforces/java/Interpreter/src/enow/: __init__.py
Windforces/java/Interpreter/src/enow/jython/Building/: __init__.py
Windforces/java/Interpreter/src/enow/jython/interfaces/: JythonObjectFactory.java  entry.java  example.json
Windforces/java/Interpreter/src/enow/jython/pythonSrc/: __init__.py  body.py  preCode.py
Windforces/java/Interpreter/src/enow/jython/pythonSrc/log/: log.txt
Windforces/java/Interpreter/src/enow/jython/runtimePackage/: runtime.py  sourceControl.py
Windforces/java/Interpreter/src/org/jython/Building/: __init__.py
Windforces/java/Interpreter/src/org/jython/interfaces/: BuildingType.java  JythonObjectFactory.java  entry.java  example.json
Windforces/java/Interpreter/src/org/jython/pythonSrc/: __init__.py  postCode.py  preCode.py
Windforces/java/Interpreter/src/org/jython/runtimePackage/: __init__.py  main.py  runtime.py  sourceControl.py
Windforces/java/Interpreter/src/org/jython/temp/: Building.py  JythonObjectFactory.java
Windforces/java/Test1/: .project
Windforces/src/: FindPahoMqtt.cmake
Windforces/src/Module/: raspberryPi_2.hpp
certificate/: JeaSungui-MacBook-Pro.local.crt  JeaSungui-MacBook-Pro.local.csr  JeaSungui-MacBook-Pro.local.key  ca.crt  ca.key  ca.srl  host_openssl.conf  rootca_openssl.conf
certificate/client/: client.crt  client.csr  client.key
enow-db/: enow-db-input.js  enow-db-output.js  readme.md
header/: KISA_SHA256.h  MQTTClient.hpp  MQTTClientPool.hpp
header/Driver/: common.cpp
header/Driver/Raspberry_Pi_2/: pi_2_mmio.hpp
java/Interpreter/: .project
java/Interpreter/src/enow/jython/: __init__.py
java/Interpreter/src/enow/jython/Building/: __init__.py
java/Interpreter/src/enow/jython/interfaces/: entry.java
java/Interpreter/src/enow/jython/pythonSrc/: StreamToLogger.py  body.py
java/Interpreter/src/enow/jython/pythonSrc/log/: log.txt
java/Interpreter/src/enow/jython/runtimePackage/: __init__.py  runtimeMain.py
java/Test1/: .classpath
java/Test1/src/org/jython/temp/: BuildingType.java  JythonObjectFactory.java  entry.java
json/: json.l  json_st.cc  json_st.hh
python/: README.md  executingBolt.py  main.py
python/enow/: __init__.py
python/enow/jython/Building/: __init__.py
python/enow/jython/interfaces/: BuildingType.java  JythonObjectFactory.java  example.json  samplefunction.py
python/enow/jython/pythonSrc/: body.py  postCode.py  preCode.py
python/enow/jython/pythonSrc/log/: log.txt
python/enow/jython/runtimePackage/: runtime.py  runtimeMain.py  sourceControl.py
sample/: main.cpp
sample/header/: preprocessFace.hpp
sample/src/: ImageUtils_0.7.cpp  detectObject.cpp
sample2/LED/: led  led.c
sampleDHT11/DHT11_Python/: dht11_example.py
samples/: CMakeLists.txt  main.cpp
samples/header/: detectObject.hpp
samples/src/: preprocessFace.cpp
src/: KISA_SHA256.c  MQTTClient.cpp  MQTTClientPool.cpp  MQTTIPC.cpp
src/Module/: piModule.hpp
